@startuml
entity User {
  Guid Id
  string Email
  string Phone
  string PasswordHash
  string Role
  string OtpCode
  DateTime OtpExpiry
}

entity Food {
  Guid Id
  string Name
  string Description
  decimal Price
  bool IsAvailable
}

entity Cart {
  Guid Id
  Guid UserId
}

entity CartItem {
  Guid Id
  Guid CartId
  Guid FoodId
  int Quantity
}

entity Order {
  Guid Id
  Guid UserId
  decimal TotalPrice
  OrderStatus Status
}

entity OrderItem {
  Guid Id
  Guid OrderId
  Guid FoodId
  int Quantity
}

User ||--o{ Cart : owns
Cart ||--o{ CartItem : contains
Food ||--o{ CartItem : referenced
User ||--o{ Order : places
Order ||--o{ OrderItem : contains
Food ||--o{ OrderItem : referenced
@enduml
